--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
 				  </h2>Estefania Olivia A / 20.N3.0004</h2><br>
 				  </h2>Elsa Ferlisia S / 20.N3.0007</h2><br><br>
 				  <p>...</p>
-              </div>
+             		 </div>
                 </section>
+	</main>
         </div>   
-</body>
-</html>
+	</body>
+	</html>
